--- a/state1.css
+++ b/state1.css
@@ -77,7 +77,7 @@ span{color: #f17e14;  font-family: 'Kaushan Script', cursive;}
 {
 
 #home li a:hover{color:#ff7309!important;}
-#about img{width: 300px; height: 330px;}
+#about img{width: 300px!important; height: 330px!important;}
 #about p{top:77px; font-size: 10px; left: 43px; text-align: center;}
 .card{margin-bottom: 20px; margin-right: 15px;}
 #testimonal h5{margin-top: 0px;}
