--- a/state1.css
+++ b/state1.css
@@ -7,7 +7,7 @@ position: relative;
 }
 #home
 {
-	background:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url(https://images.pexels.com/photos/3457299/pexels-photo-3457299.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+	background:url(https://images.pexels.com/photos/3457299/pexels-photo-3457299.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
 	background-size: cover;
     height:100vh;
 	color: #fff;
@@ -38,7 +38,7 @@ span{color: #f17e14;  font-family: 'Kaushan Script', cursive;}
 #about{background:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(https://images.pexels.com/photos/3639507/pexels-photo-3639507.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940); background-size:cover; padding: 30px; background-attachment: fixed;}
 #about p{ position :absolute; color:#000; top:71px; font-size: 10px; text-align: center; left:  373px;}
 #about p:hover{transform: scale(1.5,1.5); transition: 0.9s;}
-#about h2{ text-align: center; margin-bottom: 30px; color:#fff;}
+#about h2{ text-align: center; margin-bottom: 30px; color:#fff!important;}
 #about a {font-size: 30px; color:#55362c;}
 #testimonal{margin: 20px;}
 #testimonal h2{text-align: center; margin:30px;}
