--- a/state1.css
+++ b/state1.css
@@ -7,7 +7,7 @@ position: relative;
 }
 #home
 {
-	background:url(https://images.pexels.com/photos/3457299/pexels-photo-3457299.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+	background:url(https://images.pexels.com/photos/302769/pexels-photo-302769.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
 	background-size: cover;
     height:100vh;
 	color: #fff;
@@ -35,7 +35,7 @@ span{color: #f17e14;  font-family: 'Kaushan Script', cursive;}
 #Featured .card{ box-shadow: 5px 5px 15px 5px #55362c;}
 #Featured .card img:hover{ transform: scale(1.5,1.5); transition: 0.9s;}
 .abtimg{position :relative; text-align: center;}
-#about{background:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(https://images.pexels.com/photos/3639507/pexels-photo-3639507.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940); background-size:cover; padding: 30px; background-attachment: fixed;}
+#about{background:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(https://images.pexels.com/photos/2388639/pexels-photo-2388639.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940); background-size:cover; padding: 30px; background-attachment: fixed;}
 #about p{ position :absolute; color:#000; top:71px; font-size: 10px; text-align: center; left:  373px;}
 #about p:hover{transform: scale(1.5,1.5); transition: 0.9s;}
 #about h2{ text-align: center; margin-bottom: 30px; color:#fff!important;}
